# MuJoCo-Starter-Tutorial

./: .gitignore  CMakeLists.txt  README.md  main.c  run  run_advanced  run_unix
docs/github-guides/: README.md
docs/vscode-guides/: README.md
model/: ball.xml
src/: main.c
